src/test/deca/context/valid/provided/test02.deca
class B{
    boolean b = true;
}