src/test/deca/context/invalid/provided/testi16.deca
class A{
}
class B extends A{
}
class C{
}
{
    A a = new A();
    B b = new B();
    C c = new C();
    a = b;
    c = a;
}